--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,1 +1,43 @@
-# (paste the file contents from the block above here)
+name: Build and deploy to GitHub Pages (gh-pages)
+
+on:
+  push:
+    branches: [ main ]
+
+# Allow the job to push built files back to the repo
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          # ensure the default GITHUB_TOKEN credentials are available for subsequent steps that need to push
+          persist-credentials: true
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build (for custom domain)
+        env:
+          BASE_URL: '/'
+        run: npm run build
+
+      - name: Deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          publish_branch: gh-pages
+          cname: josephandkaitlyn.com
+          keep_files: false
