--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,12 @@ coverage
 *.sw?
 
 *.tsbuildinfo
+
+# Build artifacts that shouldn't be in src
+src/**/*.js
+src/**/*.js.map
+!src/**/*.config.js
+
+# Build artifacts from vite config compilation
+vite.config.js
+vite.config.js.map
